--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ deploy:
   secret_access_key:
     secure: fbDjFCr1so0Z5K9E2Tihle5X0JKXjFFT8Ve7WEVGMus+1MRfFaZOqUXBwxDyvUI25ob35lmuzXosCGgvlfQHrBHw4SxsBCMUYKU3jxmFgiA9qjHxytoNYB0BQIZNqQ9FjnrnTqG45zFgDBpXSGgqR0UZT66QNepLf3qWfAQFqkI=
   bucket: tone.octoblu.com
+  endpoint: tone.octoblu.com.s3-website-us-west-2.amazonaws.com
+  region: us-west-2
   local-dir: public
+  skip_cleanup: true
   acl: public_read
   on:
     branch: master
